# TGBM

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: CI_format.yaml  CI_ubuntu.yaml  CI_windows.yaml  delete_old_runs.yaml  format.yaml  sh_CI_format.yaml  sh_CI_ubuntu.yaml
benchmarks/: bench_main.cpp  boost_parse_handler.hpp  files.cpp  fuzzing.hpp  rapid_parse_handler.hpp  types.hpp
benchmarks/handler_parser/: all.hpp  basic_parser.hpp  box.hpp  common_api.hpp  disriminated_api.hpp  fundamental.hpp  ignore.hpp  oneof_field_api.hpp  optional.hpp  range.hpp
cmake/: deps.cmake  format.cmake  generate.cmake  preprocess.cmake
examples/: CMakeLists.txt
examples/echo_audio_files/: CMakeLists.txt  main.cpp
examples/echobot/: CMakeLists.txt  main.cpp
examples/inline_keyboard/: CMakeLists.txt  main.cpp
examples/photo/: CMakeLists.txt  main.cpp
examples/replace_logger/: CMakeLists.txt  main.cpp
examples/replace_logger/include/tgbm_replace/: logger.hpp
examples/test_main/: CMakeLists.txt  main.cpp
gbench/: CMakeLists.txt  bench_main.cpp  files.cpp  fuzzing.hpp  types.hpp
gtest/: CMakeLists.txt  fuzzing.hpp  fuzzing_test.hpp  gtest_formater.hpp  test_parser.cpp  utils.cpp
gtest/api/: basic_types.cpp  test_message.cpp  update.cpp
gtest/http/: connection_pool.cpp  test_body.cpp
gtest/parsers/: fixtures.hpp  test_array.cpp  test_basic.cpp  test_object.cpp  test_oneof.cpp  test_oneof_field.cpp  test_optional.cpp  test_stream.cpp  test_tree.cpp
include/tgbm/: Api.h  Bot.h  EventBroadcaster.h  EventHandler.h  TgException.h  TgTypeParser.h  bot.hpp  export.h  json.hpp  logger.h  logger.hpp  long_poll.hpp  scope_exit.h  tgbm.h  tgbot.h
include/tgbm/api/: Integer.hpp  allowed_updates.hpp  arrayof.hpp  common.hpp  const_string.hpp  file_or_str.hpp  floating.hpp  format.cmake  input_file.hpp  int_or_str.hpp  last_supported_api.html  oneof.hpp  optional.hpp  preprocess.cmake  reply_markup.hpp  requests.hpp  telegram.hpp  telegram_answer.hpp  true.hpp
include/tgbm/api_types/: Integer.h  Message.h  box_union.h  common.h  common.hpp  optional.h  optional.hpp  preprocess.cmake
include/tgbm/jsons/: boost_parse_dom.hpp  boost_parse_handler.hpp  boost_serialize_dom.hpp  boostjson_dom_traits.hpp  boostjson_sax_producer.hpp  boostjson_serialize_dom.hpp  dom_parser.hpp  dom_traits.hpp  errors.hpp  json_traits.hpp  rapid_parse_dom.hpp  rapid_parse_handler.hpp  rapidjson_dom_traits.hpp  rapidjson_serialize_sax.hpp  sax.hpp  sax_parser.hpp  stream_parser.hpp
include/tgbm/net/: BoostHttpOnlySslClient.h  ConnectionPool.h  HttpClient.h  HttpParser.h  HttpReqArg.h  HttpServer.h  TgLongPoll.h  TgWebhookLocalServer.h  TgWebhookServer.h  TgWebhookTcpServer.h  Url.h  any_acceptor.hpp  any_connection.hpp  asio_awaiters.h  asio_awaiters.hpp  asio_ssl_connection.hpp  asio_tls_transport.hpp  asio_transport.hpp  asio_transport_factory.hpp  boost_http_client.h  connectiion_pool.h  connectiion_pool.hpp  connection_pool.hpp  errors.hpp  http11_client.hpp  http2_client.hpp  http2_server.hpp  http_base.hpp  http_body.hpp  http_body_builders.hpp  http_client.hpp  http_client_with_retry.hpp  long_poll.hpp  ssl_context.hpp  tcp_connection.hpp  tcp_starters.hpp  transport_factory.hpp
include/tgbm/tools/: FileTools.h  StringTools.h  algorithm.hpp  api_utils.hpp  boost_intrusive.hpp  box.h  box.hpp  box_union.hpp  constexpr_string.h  deadline.hpp  fn_ref.hpp  formatters.hpp  from_boost_json.h  macro.hpp  math.hpp  memory.hpp  meta.hpp  parse_proxy.hpp  pfr_extension.hpp  rapidjson_to_json.h  reusable_buffer.hpp  stack_resource.hpp  to_boost_json.h  traits.hpp
include/tgbm/types/: Animation.h  Audio.h  Birthdate.h  BotCommand.h  BotCommandScope.h  BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  BotDescription.h  BotName.h  BotShortDescription.h  BusinessConnection.h  BusinessIntro.h  BusinessLocation.h  BusinessMessagesDeleted.h  BusinessOpeningHours.h  BusinessOpeningHoursInterval.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatAdministratorRights.h  ChatBoost.h  ChatBoostAdded.h  ChatBoostRemoved.h  ChatBoostSource.h  (+161 more)
include/tgbot/: Api.h  Bot.h  EventBroadcaster.h  EventHandler.h  TgException.h  TgTypeParser.h  export.h  tgbot.h
samples/echobot/: CMakeLists.txt
samples/echobot-setmycommands/: CMakeLists.txt
samples/echobot-webhook-server/: CMakeLists.txt
samples/echobot-webhook-server/src/: main.cpp
samples/inline-keyboard/: CMakeLists.txt
samples/photo/: CMakeLists.txt
samples/receive-file/: CMakeLists.txt
samples/received-text-processing/: CMakeLists.txt
samples/reply-keyboard/: CMakeLists.txt
scripts/: ci_ubuntu.make  load_api.py  presets_ubuntu-24.04.json  presets_ubuntu_24.04.json  presets_windows.json  tgapi.py  tgapi_methods.py  tgapi_types.py
src/: Api.cpp  Bot.cpp  EventHandler.cpp  TgException.cpp  TgTypeParser.cpp  api_cmp.cpp  bot.cpp  long_poll.cpp  telegram.cpp
src/api/: input_file.cpp
src/net/: BoostHttpOnlySslClient.cpp  CurlHttpClient.cpp  HttpParser.cpp  TgLongPoll.cpp  Url.cpp  asio_ssl_connection.cpp  asio_tls_transport.cpp  asio_transport.cpp  boost_http_client.cpp  http11_client.cpp  http2_client.cpp  http2_server.cpp  http_base.cpp  http_client.cpp  long_poll.cpp  ssl_context.cpp  tcp_connection.cpp  tcp_starters.cpp  transport_factory.cpp
src/tools/: FileTools.cpp  StringTools.cpp
src/types/: BotCommandScope.cpp  ChatBoostSource.cpp  ChatMember.cpp  InlineQueryResult.cpp  InputFile.cpp  InputMedia.cpp  InputMessageContent.cpp  MenuButton.cpp  MessageOrigin.cpp  PassportElementError.cpp  ReactionType.cpp
src/utils/: url_encoded.cpp
test/: CMakeLists.txt  client_smoke_no_tls.cpp  fake_server.cpp  server_client_smoke.cpp  test_basic_api_types.cpp  test_connection_pool.cpp  test_hpack.cpp  test_http2_frames.cpp  test_string_switch.cpp  test_tools.cpp  test_utils.cpp  utils.h
test/tgbot/: Api.cpp
(+819 files in other folders)
